new-base/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shark-preview
  labels:
    role: shark
spec:
  selector:
    app: shark
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
