new-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shark
    tier: front
  name: shark
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: shark
  type: ClusterIP
